--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Lisk Nano</title>
+        <title>Shift Nano</title>
         <link rel="stylesheet" href="./styles.css">
     </head>
     <body>
